# decoreq

./: .gitignore  LICENSE  README.md  pyproject.toml
src/decoreq/: __init__.py  decoreq.py
src/decoreq/context/: __init__.py  helpers.py  provider.py  vars.py
src/decoreq/decorators/: __init__.py  base.py  decoreq.py  headers.py  session.py
